--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,4 +7,4 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [1.0.0] - 2020-03-06
 
-- Initial languages: English and German
+- Initial languages: English
