--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,8 +7,14 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 - Languages: English
 
-## [1.0.1] - 2020-03-07
+## [1.0.0] - 2021-03-08
+
+- Fixed typing errors and formatting in the Changelog.
+
+## [1.0.1] - 2021-03-07
+
 Added a line for a requirements.txt-file.
 
-## [1.0.0] - 2020-03-06
+## [1.0.0] - 2021-03-06
+
 Initial release.
