--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,13 +7,18 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 - Languages: English
 
-## [1.0.0] - 2021-03-08
+## [1.0.2] - 2021-03-09
+
+- Added line to update pip.
+- Changed some text in the Changelog.
+
+## [1.0.1] - 2021-03-08
 
 - Fixed typing errors and formatting in the Changelog.
 
 ## [1.0.1] - 2021-03-07
 
-Added a line for a requirements.txt-file.
+Added a line for a pip-requirements.txt-file.
 
 ## [1.0.0] - 2021-03-06
 
