--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,12 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 - Languages: English
 
-## [1.0.3] - 2021-03-09
+## [1.0.4] - 2021-03-09
 
 - Moved @echo off-line.
+- Changed some text in the Changelog.
 
-## [1.0.2] - 2021-03-09
+## [1.0.3] - 2021-03-09
 
 - Added MIT License directly in the code.
 - Renamed.
