--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [1.0.4] - 2021-03-09
 
+- Fixed typing error.
+
+## [1.0.4] - 2021-03-09
+
 - Moved @echo off-line.
 - Changed some text in the Changelog.
 
